[package]
name = "baouncer"
version = "0.0.0"
edition = "2021"
description = "An interactive CLI for creating conventional commits"

[workspace]
members = [".", "cc-scanner"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc-scanner = { path = "./cc-scanner" }
clap = { version ="4.4.0", features= ["cargo"] }
dirs = "5.0.1"
env_logger = "0.11.6"
git2 = "0.20.0"
inquire = { version="0.6.2", features=["editor"] }
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
toml = "0.8.19"

[features]
default = ["gh_cli"]
gh_cli = []
conventional_types = []
