[package]
name = "baouncer"
version = "0.0.0"
edition = "2021"
descriptionn = "An interactive CLI for creating conventional commits"

[workspace]
memebers = [".", "cc_scanner"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version ="4.4.0", features= ["cargo"] }
inquire = "0.6.2"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
