[package]
name = "cc-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = {version = "2.7.15", features=["miette-error", "pretty-print"]}
serde = { version = "1.0.145" }
serde_json = { version = "1.0.85" }
thiserror = { version = "2" }
miette = { version = "7.2.0", features = ["fancy"] }
pest_derive = "2.7.15"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
indoc = "2.0"
